<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:mapType="none"
        app:uiCompass="false"
        app:uiMapToolbar="false"
        app:uiRotateGestures="false"
        app:uiScrollGestures="false"
        app:uiTiltGestures="false"
        app:uiZoomControls="false"
        app:uiZoomGestures="false"
        tools:visibility="visible" />

    <io.github.getsixtyfour.openpyn.minibar.MinibarView
        android:id="@+id/minibar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:ellipsize="none"
        android:includeFontPadding="false"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:requiresFadingEdge="horizontal"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="@color/material_on_surface_emphasis_high_type"
        app:lastBaselineToBottomHeight="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginTop="24dp"
        android:saveEnabled="false"
        android:visibility="gone"
        app:backgroundTint="@color/floating_action_button"
        app:elevation="2dp"
        app:ensureMinTouchTargetSize="false"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@id/fab0"
        app:layout_constraintStart_toStartOf="@id/fab0"
        app:layout_constraintTop_toTopOf="parent"
        app:pressedTranslationZ="2dp"
        app:srcCompat="@drawable/ic_juice_ssh_24"
        app:tint="@null"
        app:useCompatPadding="false"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginTop="16dp"
        android:saveEnabled="false"
        android:visibility="gone"
        app:backgroundTint="@color/floating_action_button"
        app:elevation="2dp"
        app:ensureMinTouchTargetSize="false"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@id/fab0"
        app:layout_constraintStart_toStartOf="@id/fab0"
        app:layout_constraintTop_toBottomOf="@id/fab4"
        app:pressedTranslationZ="2dp"
        app:srcCompat="@drawable/ic_round_filter_list_24"
        app:tint="@color/mtrl_outlined_icon_tint"
        app:useCompatPadding="false"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/settingsfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginTop="16dp"
        android:saveEnabled="false"
        android:visibility="gone"
        app:backgroundTint="@color/floating_action_button"
        app:elevation="2dp"
        app:ensureMinTouchTargetSize="false"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@id/fab0"
        app:layout_constraintStart_toStartOf="@id/fab0"
        app:layout_constraintTop_toBottomOf="@id/fab2"
        app:pressedTranslationZ="2dp"
        app:srcCompat="@drawable/ic_round_settings_24"
        app:tint="@color/mtrl_outlined_icon_tint"
        app:useCompatPadding="false"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.CheckableFloatingActionButton
        android:id="@+id/fab3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginBottom="16dp"
        android:saveEnabled="false"
        android:visibility="gone"
        app:backgroundTint="@color/floating_action_button"
        app:elevation="2dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@id/fab1"
        app:layout_constraintEnd_toEndOf="@+id/fab0"
        app:layout_constraintStart_toStartOf="@+id/fab0"
        app:pressedTranslationZ="2dp"
        app:srcCompat="@drawable/fab_favorite"
        app:tint="@color/favorite_icon_tint"
        app:useCompatPadding="false"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginBottom="16dp"
        android:saveEnabled="false"
        android:visibility="gone"
        app:backgroundTint="@color/floating_action_button"
        app:elevation="2dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@id/fab0"
        app:layout_constraintEnd_toEndOf="@+id/fab0"
        app:layout_constraintStart_toStartOf="@+id/fab0"
        app:pressedTranslationZ="2dp"
        app:srcCompat="@drawable/ic_round_my_location_24"
        app:tint="?attr/colorPrimaryDark"
        app:useCompatPadding="false"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.CheckableFloatingActionButton
        android:id="@+id/fab0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:saveEnabled="false"
        android:visibility="gone"
        app:backgroundTint="?attr/colorPrimaryDark"
        app:elevation="2dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:pressedTranslationZ="2dp"
        app:srcCompat="@drawable/fab_connect"
        app:tint="?android:attr/colorBackground"
        app:useCompatPadding="false"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>
